--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
                     "静态文件服务器.md",
                     "cookie.md",
                     "Express.md",
-                    "session.md"
+                    "session.md",
+                    "gulp.md"
                 ]
             },
             {
@@ -71,6 +72,14 @@
             {
                 "微信": [
                     "微信入门.md"
+                ]
+            },
+            {
+                "面试": [
+                    "CSS.md",
+                    "JAVASCRIPT.md",
+                    "其它.md",
+                    "性能优化.md"
                 ]
             }
         ]
