--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
                 "数据库": []
             },
             {
-                "CSS": []
+                "CSS": [
+                    "less.md"
+                ]
             },
             {
                 "Git": [
@@ -51,7 +53,8 @@
                     "react-router.md",
                     "react路由应用.md",
                     "jquery同步和异步.md",
-                    "属性设置.md"
+                    "属性设置.md",
+                    "promise.md"
                 ]
             },
             {
