--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
                     "初识JS.md",
                     "原型链.md",
                     "预解析作用域闭包this.md",
-                    "webstorage.md"
+                    "webstorage.md",
+                    "blog2.md"
                 ]
             },
             {
