--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
                 "前端工程化": []
             },
             {
-                "数据库": []
+                "数据库": [
+                    "mongoose.md"
+                ]
             },
             {
                 "CSS": [
