--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
                     "初识JS.md",
                     "原型链.md",
                     "预解析作用域闭包this.md",
-                    "webstorage.md",
-                    "blog2.md"
+                    "webstorage.md"
                 ]
             },
             {
