--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
             },
             {
                 "数据库": [
-                    "mongoose.md"
+                    "mongoose.md",
+                    "mysql.md"
                 ]
             },
             {
                 "CSS": [
-                    "less.md"
+                    "less.md",
+                    "jade.md"
                 ]
             },
             {
@@ -59,7 +61,11 @@
                     "cookie.md",
                     "Express.md",
                     "session.md",
-                    "珠峰博客.md"
+                    "珠峰博客.md",
+                    "socketio.md",
+                    "websocket.md",
+                    "珠峰爬虫.md",
+                    "珠峰聊天室.md"
                 ]
             },
             {
@@ -110,6 +116,7 @@
         "raw-body": "^2.1.7",
         "request": "^2.72.0",
         "sha1": "^1.1.1",
+        "socket.io": "^1.4.8",
         "xml2js": "^0.4.16"
     }
 }
