--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
             },
             {
                 "微信": [
-                    "微信入门.md"
+                    "微信开发.md"
                 ]
             },
             {
