--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
             },
             {
                 "服务器": [
-                    "ubunt配置PHP.md"
+                    "ubuntu配置PHP.md"
                 ]
             }
         ]
