--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "dependencies": {
         "bluebird": "^3.4.1",
         "co": "^4.6.0",
+        "csv2": "^0.1.1",
         "ejs": "^2.4.2",
         "express": "^4.14.0",
         "heredoc": "^1.3.1",
