--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
                     "socketio.md",
                     "websocket.md",
                     "珠峰爬虫.md",
-                    "珠峰聊天室.md"
+                    "珠峰聊天室.md",
+                    "流.md"
                 ]
             },
             {
