--- a/package.json
+++ b/package.json
@@ -99,8 +99,9 @@
                     "react基础应用.md",
                     "webpack.md",
                     "NPM.md",
-                    "reactnative.md",
-                    "RN安装.md"
+                    "RN安装.md",
+                    "RNMac.md",
+                    "RNWin.md"
                 ]
             },
             {
