--- a/package.json
+++ b/package.json
@@ -119,7 +119,8 @@
                     "模块化开发.md",
                     "正则表达式.md",
                     "缓存.md",
-                    "预解析作用域闭包this.md"
+                    "预解析作用域闭包this.md",
+                    "字符编码.md"
                 ]
             },
             {
