--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
             },
             {
                 "微信": [
-                    "微信开发.md"
+                    "微信开发.md",
+                    "OAuth.md",
+                    "OAuth实现.md",
+                    "OAuth理论.md"
                 ]
             },
             {
