--- a/package.json
+++ b/package.json
@@ -149,6 +149,12 @@
                     "缓存.md",
                     "预解析作用域闭包this.md"
                 ]
+            },
+            {
+                "node课程": [
+                    "1.es6.md",
+                    "1.gulp.md"
+                ]
             }
         ]
     },
